argocd/apps/invidious/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: invidious
spec:
  selector:
    app: server
  ports:
    - port: 3000
