argocd/apps/invidious/server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: upgrade-scheme
  namespace: invidious
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-http
  namespace: invidious
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`invidious.mohsun.az`) && !PathPrefix(`/.well-known/acme-challenge/`)
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: upgrade-scheme
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-https
  namespace: invidious
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`invidious.mohsun.az`)
      services:
        - name: server
          port: 3000
  tls:
    secretName: invidious-mohsun-az-tls
